--- a/assets/scss/page-section/_about-us.scss
+++ b/assets/scss/page-section/_about-us.scss
@@ -2,7 +2,7 @@
 =      40. About Us pages Css           =
 =======================================*/
 .about-us-bg {
-    background-image: url(../images/bg/contact-us-01-hero-bg.webp);
+    // background-image: url(../images/bg/contact-us-01-hero-bg.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
